# fsz

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/: description
src/: main.rs
